# kavork

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  QUICK_START.md  SESSION_2026-01-28_VISITOR_VIEW_500_ERROR_HANDOFF.md  check_db.py  check_table.py  clear-cache.sh  cookies.txt  docker-compose.dev.yml  error_page.html  final.html  headers.txt  headers2.txt  headers3.txt  home_result.html  import_db.py  import_schema.py  insert_data.py  insert_data2.py  insert_data3.py  login_page.html  nixpacks.toml  railway.json  railway_logs.txt
site_demo/: .bashrc  .gitignore  .htaccess.example  README.md  alembic.ini  composer.json  init  pyproject.toml  requirements.php  requirements.txt  test.html  test_smtp.php  yii
site_demo/.cursor/logs/: agent_log.md
site_demo/alembic/: env.py  script.py.mako
site_demo/alembic/versions/: 001_initial_schema.py
site_demo/app/: config.py  db.py  main.py
site_demo/app/models/: __init__.py  cafe.py  franchisee.py  user.py  visitor.py
site_demo/app/routes/: auth.py
site_demo/app/schemas/: auth.py
site_demo/backend/assets/: AppAsset.php
site_demo/backend/config/: main.php
site_demo/backend/controllers/: SiteController.php
site_demo/common/components/: ActiveRecord.php  ApiRateLimiter.php  CheckboxColumn.php  Help.php  Helper.php  LoginRateLimiter.php  SecurityHeaders.php  TranslationEventHandler.php  TwigString.php  VatHelper.php  twigFunctionList.php
site_demo/common/config/: bootstrap.php  clear-twig-cache.php  main-local.example.php  main.php  params-local.example.php  params.php  start_param.example.php
site_demo/common/fixtures/: UserFixture.php
site_demo/common/mail/: passwordResetToken-html.php
(+699 files in other folders)
