[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-bidnapper"
version = "0.1.0"
description = "Secure backend foundation for the NEW BIDNAPPER eBay sniper SaaS."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.14",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
    "orjson>=3.9.15"
]

[project.optional-dependencies]
worker = [
    "apscheduler>=3.10.4"
]

[tool.setuptools.packages.find]
where = ["app"]


