[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kavork-cafe-management"
version = "0.1.0"
description = "Kavork Cafe/Anticafe Management System - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.14",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
    "orjson>=3.9.15"
]

[tool.setuptools.packages.find]
where = ["app"]
